# InspireCV

./: .gitignore  CMakeLists.txt  README.md  read_rgb.py  show_rgb.py  to_rgb.py
.github/workflows/: run_test.yaml
command/: build.sh  build_rga_rv1106.sh  build_run_test.sh
include/inspirecv/: inspirecv.h  time_spend.h  version.h
include/inspirecv/core/: image.h  processor.h
include/inspirecv/task/: matrix.h  rect.h  task.h  task_status.h  types.h
include/inspirecv/task/core/: matrix.h  rect.h  st_defs.h  st_types.h  stream_task.h
src/inspirecv/: costman.cpp  logging.cpp  version.cpp  version.cpp.in
src/inspirecv/impl/: image.cpp  impl.h  point.cpp  rect.cpp  size.cpp  transform_matrix.cpp
src/inspirecv/impl/okcv/: all.h  image_okcv.h  point_okcv.h  rect_okcv.h  size_okcv.h  transform_matrix_okcv.h
src/inspirecv/impl/opencv/: all.h  image_opencv.h  point_opencv.h  rect_opencv.h  size_opencv.h  transform_matrix_opencv.h
src/inspirecv/impl/utils/: similar_transform_umeyama_eigen.h  similar_transform_umeyama_opencv.h
src/inspirecv/okcv/: image.cpp  image.h  image_bmp.cpp  image_bmp.h  okcv.h
src/inspirecv/okcv/base/: base.h  status.h  types.cpp  types.h
src/inspirecv/okcv/geometry/: cv_point.cpp  cv_point.h  cv_rect.h  cv_transform_matrix.cpp  geom.h  geom_common.h  point.cpp  point.h  rect.h  size.h  transform_matrix.cpp  transform_matrix.h
src/inspirecv/okcv/io/: stb_warpper.h  std_warpper.cpp
src/inspirecv/okcv_rga/: dma_alloc.cpp  image_rga.cpp  image_rga.h  main.c  okcv_rga.h  processor.cpp  processor_impl.h  rga_processor.h
src/inspirecv/task/: avx2_memcpy.cc  cpu_features.cc  cpu_features.h  matrix.cc  stream_task.cc  stream_task_kernels.cc  stream_task_utils.cc  streamtask_config.cc.in
src/inspirecv/task/core/: SkNx.h  SkNx_neon.h  stream_task_kernels.h  stream_task_utils.h
src/inspirecv/task/core/asm/: asm_macros.h  kernels_arm32.S  kernels_arm64.S
src/sample/: rga_raw.cpp  sample_gauss_blur.cpp  sample_icv_rga.cpp  sample_image.cpp  sample_image_mem.cpp  sample_image_rga.cpp  sample_morphology.cpp  sample_pipeline.cpp  sample_point.cpp  sample_rga.cpp  sample_task_bench.cpp  sample_task_bench_formats.cpp  sample_task_verify.cpp
src/test/: test.cpp
src/test/cases/: test_benchmark.cpp  test_geometry.cpp  test_image.cpp  test_image_float.cpp  test_mnn_imgprocess.cpp  test_transform.cpp
src/test/common/: common.h  inspirecv_image_process.h  test_helper.h
